--- a/src/components/Canvas/WhiteboardControls.css
+++ b/src/components/Canvas/WhiteboardControls.css
@@ -1,7 +1,7 @@
 .whiteboard-controls {
   position: fixed;
   bottom: 24px;
-  right: 24px;
+  left: 24px;
   z-index: 90;
   display: flex;
   align-items: center;
